--- a/talk/slides.html
+++ b/talk/slides.html
@@ -776,6 +776,7 @@ to read file as String.</li>
 <p>Hints:</p>
 <ul>
 <li>Read linked page in file.</li>
+<li>You can use <code>sbt assembly</code> for a fat jar</li>
 <li>Read error messsage(s).</li>
 </ul>
 </div>
